# tatva

./: .changelog.tpl  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: mirror-to-gitlab.yml  release.yml  run_tests.yml
benchmarking/: memory-100.prof  memory-50.prof  memory.prof  plot.py  profiling_gpus.py  profiling_memory_usage.py  profiling_time.py  run.py  run_cpu.py  run_rocm.py
docs/: getting_started.md
docs/docs/source/: conf.py  index.rst
docs/docs/source/api/: modules.rst  tatva.rst
docs/examples/: crack_nucleation_LEFM.ipynb  fem_with_ad.qmd  hertzian_contact.ipynb  jupytext.toml
docs/reference/: compound.md  element.md  lifter.md  mesh.md  operator.md  plotting.md  sparse.md
examples/: neo_hookean.ipynb
examples/notebooks/: bar.ipynb  bar_geo_nl_test.ipynb  basics.ipynb  cohesive_fracture.ipynb  contact_lagrange_multiplier.ipynb  contact_lm.ipynb  contact_lm_geo_nl.ipynb  contact_penalty.ipynb  contact_penalty_method.ipynb  contact_penalty_sparse.ipynb  dynamic_fracture.ipynb  elements_2d.ipynb  fracture_lefm.ipynb  fracture_quasistatic.ipynb  hertz_contact_penalty.ipynb  lefm.ipynb  linear_elasticity.ipynb  linear_elasticity_cursor.ipynb  nonlinear_elasticity.ipynb  operator.ipynb  penalty_contact.ipynb  petsc_mf_solvers.ipynb  petsc_sparse_solvers.ipynb  quasistatic_fracture.ipynb  sparse_linear_elasticity.ipynb  sparse_nonlinear_elasticity.ipynb  thermo_mechanical.ipynb  tools.py
femsolver/: _element.py  compound.py  element.py  fem_tools.py  integrate.py  mesh.py  operator.py  operator_refactored.py  quadrature.py  solver.py  solver_utils.py  sparse.py  utils.py
femsolver/element/: __init__.py  shell.py  shell_2.py
femsolver/plotting/: __init__.py  _pyvista.py  colors.py
tatva/: __init__.py  _element.py  api.py  beam_operator.py  compound.py  compound_mpi.py  element.py  io.py  lifter.py  mesh.py  mpi.py  operator.py  quadrature.py  sparse.py  utils.py
tatva-coloring/: Cargo.toml  pyproject.toml
tatva-coloring/python/tatva_color/: __init__.py
tatva-coloring/src/: lib.rs
tatva/compound/: __init__.py  field.py  field_types.py  mpi.py
tatva/element/: __init__.py  _element.py  base.py  beam.py  shell.py
tatva/experimental/: assembler.py  assmebler.py
tatva/lifter/: __init__.py  base.py  common.py  constraints.py
tatva/plotting/: __init__.py  _pyvista.py  colors.py
tatva/sparse/: __init__.py  _coloring.py  _extraction.py  base.py  tracer.py
tests/: test_allreduce.py  test_allreduce_benchmark.py  test_allreduce_plan.py  test_assembler.py  test_colored_matrix_benchmark.py  test_compound.py  test_compound_autosizing.py  test_compound_benchmark.py  test_compound_mpi.py  test_element.py  test_elements.py  test_exchange_plan.py  test_gradient_trace.py  test_integration.py  test_lifter.py  test_lifter_benchmark.py  test_lifter_residual.py  test_mesh.py  test_mpi_global_indices.py  test_mpi_reduce.py  test_neighbor_exchange.py  test_neighbor_exchange_benchmark.py  test_new_exchange_plan.py  test_notebook.py  test_operator.py  test_operator_projection.py  test_periodic_mpi.py  test_refactored_sparsity.py  test_sparse.py  test_sparse_benchmark.py  test_sparse_tracer.py  test_sparse_tracer_core.py  test_stiffness_matrix.py  tests.ipynb
