[project]
name = "tatva"
version = "0.1.0"
description = "Lego-like building blocks for finite element analysis"
authors = [
    { name = "Mohit Pundir", email = "mpundir@ethz.ch" },
    { name = "Flavio Lorez", email = "florez@ethz.ch" },
]
license = "MIT"
license-files = ["LICENSE.md",]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax<=0.6.1",
    "equinox",
    "numpy",
    "sparsejac",
    "matplotlib",
    "scipy",
    "gmsh",
    "meshio",
    "jax-autovmap>=0.3.0",
]

[project.optional-dependencies]
examples = [
    "cmcrameri",
    "ipykernel>=6.30.0",
]

[build-system]
requires = [ "hatchling", ]
build-backend = "hatchling.build"

[project.urls]
repository = "https://gitlab.ethz.ch/smec/software/tatva"
