[project]
name = "tatva"
version = "0.5.1"
description = "Lego-like building blocks for differentiable finite element analysis"
authors = [
    { name = "Mohit Pundir", email = "mpundir@ethz.ch" },
    { name = "Flavio Lorez", email = "florez@ethz.ch" },
]
license = "LGPL-3.0"
license-files = [
    "COPYING",
    "COPYING.LESSER",
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.4.1",
    "equinox",
    "numpy",
    "jax-autovmap>=0.3.0",
    "tatva-coloring"
]

[project.optional-dependencies]
plotting = [
    "matplotlib",
]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = [ "hatchling", ]
build-backend = "hatchling.build"

[project.urls]
repository = "https://github.com/smec-ethz/tatva"