[project]
name = "tatva"
version = "0.9.1"
description = "Lego-like building blocks for differentiable finite element analysis"
authors = [
    { name = "Mohit Pundir", email = "mpundir@ethz.ch" },
    { name = "Flavio Lorez", email = "florez@ethz.ch" },
]
license = "LGPL-3.0"
license-files = [
    "COPYING",
    "COPYING.LESSER",
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.4.1",
    "numpy",
    "jax-autovmap>=0.3.0",
    "tatva-coloring>=0.0.2"
]

[project.optional-dependencies]
plotting = [
    "matplotlib",
]
dev = [
    "pytest>=8.4.2",
]
mpi = [
    "mpi4py",
    # mpi4jax 0.9.0 is tested against jax 0.9.1 only. Bump both together when
    # mpi4jax releases support for a newer jax minor.
    "mpi4jax>=0.9.0",
    "jax==0.9.1",
]

[build-system]
requires = [ "hatchling", ]
build-backend = "hatchling.build"

[project.urls]
repository = "https://github.com/smec-ethz/tatva"
